# poly-chat

./: .env.example  .gitignore  AGENTS.md  SPEC.md  spec.md
.agents/skills/create-jira-task/: SKILL.md
.agents/skills/create-jira-task/agents/: openai.yaml
.codex/: config.example.toml
.codex/agents/: frontend-dev.toml  python-backend-dev.toml  spec-owner.toml  spec-reviewer.toml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  generation.py  main.py  models.py  ngram_training.py  registry.py
backend/app/adapters/: ngram.py  ngram_transition_model.py
backend/app/api/: routes.py
backend/tests/: test_api.py
docs/: local-atlassian-mcp.md
frontend/: README.md  deno.json  index.html
frontend/src/: api.ts  main.ts  styles.css
models/artifacts/tiny-shakespeare-demo-ngram/: model.json
models/registry/: tiny-shakespeare-demo-ngram.json  tiny-shakespeare-ngram.json
