[project]
name = "poly-chat-backend"
version = "0.1.0"
description = "FastAPI backend for the Poly Chat local model workbench."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.32.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
